kcms/fonts/previewimageprovider.cpp
@@ -75,9 +75,6 @@ PreviewImageProvider::PreviewImageProvider(const QFont &font)
 QImage PreviewImageProvider::requestImage(const QString &id, QSize *size, const QSize &requestedSize)
 {
     Q_UNUSED(requestedSize)
-    if (!KWindowSystem::isPlatformX11()) {
-        return QImage();
-    }
 
     int subPixelIndex = 0;
     int hintingIndex = 0;
